--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p class="lead">
+				<h2 class="lead">
 					L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.
-				  </p>
+				  </h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
