--- a/contact.html
+++ b/contact.html
@@ -149,15 +149,14 @@
 						</div>
 					</div>
 				</div>
-				</div>
 			</div>
 		</div>
 	</div>
 </footer>
-<!-- Footer - bloc-8 END -->
+<!-- Footer - bloc-8  -->
 
 </div>
-<!-- Principal conteneur END -->
+<!-- Principal conteneur  -->
     
 <script src="./js/jquery-2.1.0.js"></script>
 <script src="./js/bootstrap.js"></script>
