--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<p><strong><em>"L'agence La Parenthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</em></strong></p>
-				<div>
-					Maxime Guibard, <cite>PDG de A vos fourchettes</cite></div>
+				<div><cite>Maxime Guibard, PDG de A vos fourchettes</cite></div>
 			</div>
 		</div>
 	</div>
