:mag: add webP images

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a class="navbar-brand" href="index.html"
                 ><img
                   src="img/agence-la-panthere-monochrome.svg"
-                  alt="paris web design logo agence web meilleure agence"
+                  alt="Logo agence la panthere"
                   height="40"
               /></a>
               <button
@@ -69,12 +69,16 @@
         <div class="container bloc-lg">
           <div class="row tight-width-whitespace">
             <div class="col-sm-12">
-              <img
-                src="img/logo.webp"
-                class="center-block image-resize-mode"
-                width="100"
-                alt="Agence La Panthère, agence web paris, création logo paris"
-              />
+              <picture>
+                <source type="img/webp" srcset="img/logo.webp">
+                <source type="img/png" srcset="img/logo.png">
+                <img
+                  src="img/logo.webp"
+                  class="center-block image-resize-mode"
+                  width="100"
+                  alt="Logo Agence La Panthère"
+                />
+              </picture>
               <h1 class="text-center hero-bloc-text tc-white">
                 Agence La Panthère
               </h1>
@@ -217,11 +221,17 @@
                 data-gallery-id="gallery-1"
                 data-caption="Refonte d'un site web pour un journal local"
                 data-frame="snapshot-lb"
-                ><img
-                  src="img/image-1.webp"
-                  alt="paris web design logo agence web meilleure agence et refonte site web journal"
-                  class="img-responsive portfolio-thumb"
-              /></a>
+                >
+                <picture>
+                  <source type="img/webp" srcset="img/image-1.webp">
+                  <source type="img/jpg" srcset="img/image-1.jpg">
+                  <img
+                    src="img/image-1.webp"
+                    alt="PLusieurs livres de couleurs"
+                    class="img-responsive portfolio-thumb"
+                />
+                </picture>
+            </a>
               <h3 class="mg-md text-center">
                 Refonte d'un site web pour un journal local
               </h3>
@@ -237,11 +247,17 @@
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site web pour photographes"
                 data-frame="snapshot-lb"
-                ><img
-                  src="img/image-2.webp"
-                  class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes"
-              /></a>
+                >
+                <picture>
+                  <source type="img/webp" srcset="img/image-2.webp">
+                  <source type="img/jpg" srcset="img/image-2.jpg">
+                  <img
+                    src="img/image-2.webp"
+                    class="img-responsive portfolio-thumb"
+                    alt="Une photographe"
+                />
+                </picture>
+              </a>
               <h3 class="mg-md text-center">
                 Création d'un site web pour photographes
               </h3>
@@ -259,11 +275,17 @@
                 data-gallery-id="gallery-1"
                 data-caption="Création d'un site internet pour un voyageur"
                 data-frame="snapshot-lb"
-                ><img
+                >
+                <picture>
+                  <source type="img/webp" srcset="img/image-3.webp">
+                  <source type="img/jpg" srcset="img/image-3.jpg">
+                <img
                   src="img/image-3.webp"
                   class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"
-              /></a>
+                  alt="Matériels de photographe"
+                />
+                </picture>
+            </a>
               <h3 class="mg-md text-center">
                 Création d'un site internet pour un voyageur
               </h3>
@@ -279,11 +301,17 @@
                 data-gallery-id="gallery-1"
                 data-caption="Conception d'un site pour une agence de mariage"
                 data-frame="snapshot-lb"
-                ><img
-                  src="img/image-4.webp"
-                  class="img-responsive portfolio-thumb"
-                  alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"
-              /></a>
+                >
+                <picture>
+                  <source type="img/webp" srcset="img/image-4.webp">
+                  <source type="img/jpg" srcset="img/image-4.jpg">
+                  <img
+                    src="img/image-4.webp"
+                    class="img-responsive portfolio-thumb"
+                    alt="macbook"
+                />
+                </picture>
+            </a>
               <h3 class="mg-md text-center">
                 Conception d'un site pour une agence de mariage
               </h3>
